--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=SpringAndSpringBootApplication
+# this for root
+logging.level.root=info
+# this is for sql
+logging.level.sql=debug
+logging.level.org.springframework.web=error
+logging.level.com.amigoscode=debug
